--- a/Jogo.html
+++ b/Jogo.html
@@ -2,10 +2,12 @@
 <html lang="pt-BR">
 <meta charset=“utf-8”>
 <head>
+<title>Palavras</title>
 	
 </head>
 <body>
+<script>
 <h1>Aqui vai o título do conteúdo do jogo</h1>
-	
-</body
+</script>
+</body>
 </html>
