--- a/Jogo.html
+++ b/Jogo.html
@@ -2,12 +2,26 @@
 <html lang="pt-BR">
 <meta charset=“utf-8”>
 <head>
-<title>Palavras</title>
-	
+<title>Palavras</title>	
 </head>
 <body>
 <h1>Aqui vai o título do conteúdo do jogo</h1>
 <script>
+	//Variáveis do jogo
+	var canvas, ctx, ALTURA, LARGURA, frames = 0;
+	
+	function clique() {}
+	function main() {
+	ALTURA = window.innerHeight;
+	LARGURA = window.innerwidth;
+		if (LARGURA >= 500){
+			LARGURA = 600;
+			ALTURA = 600;
+		}
+		
+	function atualiza () {}
+	//Inicia o jogo
+	main();
 </script>
 </body>
 </html>
