--- a/Jogo.html
+++ b/Jogo.html
@@ -3,6 +3,16 @@
 <meta charset=“utf-8”>
 <head>
 <title>Palavras</title>	
+<style>
+	canvas {
+		position: absolute;
+		top: 0px;
+		bottom: 0px;
+		left: 0px;
+		right: 0px;
+		margin: auto;
+	}
+</style>
 </head>
 <body>
 <script>
@@ -17,6 +27,13 @@
 			LARGURA = 600;
 			ALTURA = 600;
 		}
+		canvas = document.creatElement("canvas");
+		canvas.width = LARGURA;
+		canvas.height = ALTURA;
+		canvas.style.border = "1px solid #000";
+		
+		ctx = canvas.getContext("2d");
+		document.body.appendChild(canvas);
 		
 	function atualiza () {}
 	//Inicia o jogo
