--- a/Jogo.html
+++ b/Jogo.html
@@ -19,7 +19,9 @@
 	//Variáveis do jogo
 	var canvas, ctx, ALTURA, LARGURA, frames = 0;
 	
-	function clique() {}
+	function clique(event) {
+	alert("Clicou");
+	}
 	function main() {
 	ALTURA = window.innerHeight;
 	LARGURA = window.innerwidth;
@@ -34,6 +36,8 @@
 		
 		ctx = canvas.getContext("2d");
 		document.body.appendChild(canvas);
+		
+		document.addEventListener("mousedown", clique);
 		
 	function atualiza () {}
 	//Inicia o jogo
