--- a/Jogo.html
+++ b/Jogo.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<meta charset=“utf-8”>
-<head>
-<title>Palavras</title>	
-<style>
-	canvas {
-		position: absolute;
-		top: 0px;
-		bottom: 0px;
-		left: 0px;
-		right: 0px;
-		margin: auto;
-	}
-</style>
-</head>
-<body>
-<script>
-	//Variáveis do jogo
-	var canvas, ctx, ALTURA, LARGURA, frames = 0;
-	
-	function clique(event) {
-	alert("Clicou");
-	}
-	function main() {
-	ALTURA = window.innerHeight;
-	LARGURA = window.innerwidth;
-		if (LARGURA >= 500){
-			LARGURA = 600;
-			ALTURA = 600;
+	<head>
+		<meta charset=“utf-8”>
+		<title>Palavras</title>	
+		<style>
+		canvas {
+			position: absolute;
+			top: 0px;
+			bottom: 0px;
+			left: 0px;
+			right: 0px;
+			margin: auto;
 		}
-		canvas = document.creatElement("canvas");
-		canvas.width = LARGURA;
-		canvas.height = ALTURA;
-		canvas.style.border = "1px solid #000";
-		
-		ctx = canvas.getContext("2d");
-		document.body.appendChild(canvas);
-		
-		document.addEventListener("mousedown", clique);
-		
-	function atualiza () {}
-	//Inicia o jogo
-	main();
-</script>
-</body>
+		</style>
+	</head>
+	<body>
+	<script>
+		//Variáveis do jogo
+		var canvas, ctx, ALTURA, LARGURA, frames = 0;
+
+		function clique(event) {
+		alert("Clicou");
+		}
+		function main() {
+		ALTURA = window.innerHeight;
+		LARGURA = window.innerwidth;
+			if (LARGURA >= 500){
+				LARGURA = 600;
+				ALTURA = 600;
+			}
+			
+			canvas = document.createElement("canvas");
+			canvas.width = LARGURA;
+			canvas.height = ALTURA;
+			canvas.style.border = "1px solid #000";
+
+			ctx = canvas.getContext("2d");
+			document.body.appendChild(canvas);
+
+			document.addEventListener("mousedown", clique);
+
+		function atualiza () {}
+		function roda() {}
+		function desenha() {}
+		//Inicia o jogo
+		main();
+	</script>
+	</body>
 </html>
