--- a/Jogo.html
+++ b/Jogo.html
@@ -24,7 +24,7 @@
 		}
 		function main() {
 		ALTURA = window.innerHeight;
-		LARGURA = window.innerwidth;
+		LARGURA = window.innerWidth;
 			if (LARGURA >= 500){
 				LARGURA = 600;
 				ALTURA = 600;
