--- a/Jogo.html
+++ b/Jogo.html
@@ -35,7 +35,7 @@
 			canvas.height = ALTURA;
 			canvas.style.border = "1px solid #000";
 
-			ctx = canvas.getContext("2d");
+			ctx = canvas.getcontext("2d");
 			document.body.appendChild(canvas);
 
 			document.addEventListener("mousedown", clique);
